Added a better autorenaming tool

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ rust/
 background/resourcesnorm 
 background/resourceswide
 background/resources background/resourcesnorm background/resourceswide
+.venv/
