--- a/BetterDiscord/plugins/PinDMs.config.json
+++ b/BetterDiscord/plugins/PinDMs.config.json
@@ -38,7 +38,7 @@
 							"832689238914367489"
 						],
 						"pos": 1,
-						"collapsed": true,
+						"collapsed": false,
 						"color": [
 							241,
 							196,
@@ -96,7 +96,7 @@
 			},
 			"groups": {
 				"enabled": true,
-				"collapsed": true
+				"collapsed": false
 			}
 		},
 		"recentOrder": {
