--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -48,10 +48,10 @@ general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     gaps_in = 5
-    gaps_out = 20
-    border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    gaps_out = 15
+    border_size = 3 
+    col.active_border = rgb(711C91) rgb(EA00D9) rgb(0abdc6) 45deg
+    col.inactive_border = rgb(133e7c) rgb(091833) 45deg
 
     layout = dwindle
 }
@@ -77,7 +77,6 @@ animations {
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
     animation = border, 1, 10, default
@@ -88,8 +87,9 @@ animations {
 
 dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = yes # you probably want this
+    pseudotile = 0
+    preserve_split = 1
+    force_split = 2
 }
 
 master {
@@ -174,20 +174,26 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+# App Workspace Bindings
+windowrule = workspace 1, ^(.*brave.*)$
+windowrule = workspace 8, ^(.*mpv.*)$
+windowrule = workspace 7, ^(.*discord.*)$
 # Enable Floating on Windows
 bind = $mainMod SHIFT, space,togglefloating
 
 # Discord PPT 
-bind = ,Insert,pass,^(Discord)$
+bind = ,Insert,pass,^(.*discord*.)$
+
 # Other
 bind = $mainMod, U, exec, brave
 bind = $mainMod, D, exec, ~/.config/rofi/launchers/type-7/launcher.sh
 bind = $mainMod, Y, exec, ~/.local/bin/yt
 bind = $mainMod,F,fullscreen
-bind = SUPER,TAB,workspace,previous
-exec = bash $HOME/.scripts/killbar.sh
-exec = swww init
-exec = dunst
+bind = $mainMod,TAB,workspace,previous
+bind = $mainMod SHIFT,s,exec, ''grim -g "$(slurp -d)" - | wl-copy''
+# Startup :workspace:workspace
+exec = bash $HOME/.scripts/hypronstart.sh
+exec = $HOME/.scripts/background/cron.sh ~/Pictures/Sci-Fi/
 
 # Workspace Binding.
 wsbind=6,DP-1
