--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -58,7 +58,7 @@ general {
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
+    blur_ignore_opacity = true
     rounding = 10
     blur = yes
     blur_size = 3
@@ -112,7 +112,8 @@ device:epic-mouse-v1 {
 }
 
 # Example windowrule v1
-# windowrule = float, ^(kitty)$
+windowrule = float, ^(pavucontrol)$
+windowrule = opacity 0.99 0.92, obsidian 
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
@@ -127,8 +128,8 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating, 
 # bind = $mainMod, R, exec, wofi --show drun
-# bind = $mainMod, P, pseudo, # dwindle
-# bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -191,10 +192,13 @@ bind = $mainMod, Y, exec, ~/.local/bin/yt
 bind = $mainMod,F,fullscreen
 bind = $mainMod,TAB,workspace,previous
 bind = $mainMod SHIFT,s,exec, ''grim -g "$(slurp -d)" - | wl-copy''
+
 # Startup :workspace:workspace
 exec = bash $HOME/.scripts/hypronstart.sh
+exec-once = swww init
 exec = $HOME/.scripts/background/cron.sh ~/Pictures/Sci-Fi/
-
+exec-once = /etc/profiles/per-user/hirschy/bin/brave
+exec-once = /run/current-system/sw/bin/discord 
 # Workspace Binding.
 wsbind=6,DP-1
 wsbind=7,DP-1
