--- a/BetterDiscord/data/stable/settings.json
+++ b/BetterDiscord/data/stable/settings.json
@@ -28,7 +28,7 @@
     },
     "developer": {
         "debugLogs": false,
-        "devTools": false,
+        "devTools": true,
         "debuggerHotkey": false,
         "reactDevTools": false,
         "inspectElement": false,
