--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -58,7 +58,7 @@ general {
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    blur_ignore_opacity = true
+    # blur_ignore_opacity = true
     rounding = 10
     blur = yes
     blur_size = 3
@@ -71,18 +71,34 @@ decoration {
     col.shadow = rgba(1a1a1aee)
 }
 
-animations {
+animations { #Thank you to HyprDots
     enabled = yes
+    bezier = wind, 0.05, 0.9, 0.1, 1.05
+    bezier = winIn, 0.1, 1.1, 0.1, 1.1
+    bezier = winOut, 0.3, -0.3, 0, 1
+    bezier = liner, 1, 1, 1, 1
+    animation = windows, 1, 6, wind, slide
+    animation = windowsIn, 1, 6, winIn, slide
+    animation = windowsOut, 1, 5, winOut, slide
+    animation = windowsMove, 1, 5, wind, slide
+    animation = border, 1, 1, liner
+    animation = borderangle, 1, 30, liner, loop
+    animation = fade, 1, 10, default
+    animation = workspaces, 1, 5, wind
+}
+
+# animations {
+    # enabled = yes
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    # bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    # animation = windows, 1, 7, myBezier
+    # animation = windowsOut, 1, 7, default, popin 80%
+    # animation = border, 1, 10, default
+    # animation = borderangle, 1, 8, default
+    # animation = fade, 1, 7, default
+    # animation = workspaces, 1, 6, default
 }
 
 dwindle {
@@ -114,6 +130,8 @@ device:epic-mouse-v1 {
 # Example windowrule v1
 windowrule = float, ^(pavucontrol)$
 windowrule = opacity 0.99 0.92, obsidian 
+windowrulev2 = fullscreen,class:^(*.steam_app.*)$
+windowrulev2 = float,class:^(*.steam_app.*)$
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
@@ -124,13 +142,15 @@ windowrule = opacity 0.99 0.92, obsidian
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, kitty
 bind = $mainMod, O, killactive, 
-bind = $mainMod, M, exit, 
+bind = $mainMod, M, exit,
+bind = $mainMod, R, exec,hyprctl reload
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating, 
+bind = $mainMod, G, exec, ~/.config/hypr/scripts/gamelauncher.sh 2
 # bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-
+bind = $mainMod, I, exec, ~/.scripts/scrn_record.sh
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
@@ -177,6 +197,7 @@ bindm = $mainMod, mouse:273, resizewindow
 
 # App Workspace Bindings
 windowrule = workspace 1, ^(.*brave.*)$
+windowrulev2 = workspace 3, class:^(.*steam_app.*)$
 windowrule = workspace 8, ^(.*mpv.*)$
 windowrule = workspace 7, ^(.*discord.*)$
 # Enable Floating on Windows
@@ -198,7 +219,7 @@ exec = bash $HOME/.scripts/hypronstart.sh
 exec-once = swww init
 exec = $HOME/.scripts/background/cron.sh ~/Pictures/Sci-Fi/
 exec-once = /etc/profiles/per-user/hirschy/bin/brave
-exec-once = /run/current-system/sw/bin/discord 
+exec-once = /etc/profiles/per-user/hirschy/bin/discord 
 # Workspace Binding.
 wsbind=6,DP-1
 wsbind=7,DP-1
