--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -112,10 +112,9 @@ master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
     new_is_master = true
 }
-
 gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = off
+    workspace_swipe = true
+    workspace_swipe_fingers = 3
 }
 binds {
    allow_workspace_cycles = yes
