Getting closed to happy for now. I want to switch to eww here eventually. I do not have that in me though. Maybe christmas

--- a/BetterDiscord/plugins/PinDMs.config.json
+++ b/BetterDiscord/plugins/PinDMs.config.json
@@ -18,7 +18,7 @@
 							"750077454726725732"
 						],
 						"pos": 0,
-						"collapsed": true,
+						"collapsed": false,
 						"color": [
 							173,
 							20,
@@ -96,7 +96,7 @@
 			},
 			"groups": {
 				"enabled": true,
-				"collapsed": false
+				"collapsed": true
 			}
 		},
 		"recentOrder": {
