Added eww dashboard and swaync for notification center

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -62,7 +62,7 @@ decoration {
     rounding = 10
     blur { 
       enabled = true
-      size = 3
+      size = 4
       passes = 1 
       new_optimizations = true 
     }
@@ -212,8 +212,10 @@ bind = $mainMod, D, exec, ~/.config/rofi/launchers/type-7/launcher.sh
 bind = $mainMod, Y, exec, ~/.local/bin/yt
 bind = $mainMod,F,fullscreen
 bind = $mainMod,TAB,workspace,previous
-bind = $mainMod SHIFT,s,exec, ''grim -g "$(slurp -d)" - | wl-copy''
+bind = $mainMod SHIFT,s,exec, ''grim -g "$(slurp -d)" - | wl-copy'''
 
+# blurls = dashboard
+# layerrule = ignorezero, dashboard
 # Startup :workspace:workspace
 exec = bash $HOME/.scripts/hypronstart.sh
 exec-once = swww init
