lil update, nvim dots

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -23,7 +23,6 @@ monitor=DP-2,2560x1080@200,0x1080,1,vrr,2
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
-
 $mainMod = SUPER
 # Some default env vars.
 env = XCURSOR_SIZE,24
@@ -126,12 +125,16 @@ binds {
 device:epic-mouse-v1 {
     sensitivity = -0.5
 }
+misc {
+  force_hypr_chan = true
 
+}
 # Example windowrule v1
 windowrule = float, ^(pavucontrol)$
 windowrule = opacity 0.99 0.92, obsidian 
 windowrulev2 = fullscreen,class:^(*.steam_app.*)$
 windowrulev2 = float,class:^(*.steam_app.*)$
+windowrulev2 = float,class:^(thunar)$
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
@@ -219,7 +222,7 @@ bind = $mainMod SHIFT,s,exec, ''grim -g "$(slurp -d)" - | wl-copy'''
 # Startup :workspace:workspace
 exec = bash $HOME/.scripts/hypronstart.sh
 exec-once = swww init
-exec = $HOME/.scripts/background/cron.sh ~/Pictures/Sci-Fi/
+exec = $HOME/.scripts/background/cron.sh ~/Pictures/Space/
 exec-once = /etc/profiles/per-user/hirschy/bin/brave
 exec-once = /etc/profiles/per-user/hirschy/bin/discord 
 # Workspace Binding.
