--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ background/resourcesnorm
 background/resourceswide
 background/resources background/resourcesnorm background/resourceswide
 .venv/
+.venv
