--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -148,7 +148,7 @@ bind = $mainMod, O, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, R, exec,hyprctl reload
 bind = $mainMod, E, exec, dolphin
-bind = $mainMod, V, togglefloating, 
+bind = $mainMod, V, exec, youtube-music --disable-gpu 
 bind = $mainMod, G, exec, ~/.config/hypr/scripts/gamelauncher.sh 2
 # bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
@@ -203,6 +203,7 @@ windowrule = workspace 1, ^(.*brave.*)$
 windowrulev2 = workspace 3, class:^(.*steam_app.*)$
 windowrule = workspace 8, ^(.*mpv.*)$
 windowrule = workspace 7, ^(.*discord.*)$
+windowrulev2 = workspace 6, class:^(.*YouTube Music.*)$
 # Enable Floating on Windows
 bind = $mainMod SHIFT, space,togglefloating
 
@@ -215,14 +216,14 @@ bind = $mainMod, D, exec, ~/.config/rofi/launchers/type-7/launcher.sh
 bind = $mainMod, Y, exec, ~/.local/bin/yt
 bind = $mainMod,F,fullscreen
 bind = $mainMod,TAB,workspace,previous
-bind = $mainMod SHIFT,s,exec, ''grim -g "$(slurp -d)" - | wl-copy'''
+bind = $mainMod SHIFT,s,exec, ~/.config/hypr/scripts/screenshot --area
 
 # blurls = dashboard
 # layerrule = ignorezero, dashboard
 # Startup :workspace:workspace
 exec = bash $HOME/.scripts/hypronstart.sh
 exec-once = swww init
-exec = $HOME/.scripts/background/cron.sh ~/Pictures/Space/
+# exec = $HOME/.scripts/background/cron.sh ~/Pictures/Space/
 exec-once = /etc/profiles/per-user/hirschy/bin/brave
 exec-once = /etc/profiles/per-user/hirschy/bin/discord 
 # Workspace Binding.
