--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -131,9 +131,10 @@ misc {
 }
 # Example windowrule v1
 windowrule = float, ^(pavucontrol)$
-windowrule = opacity 0.99 0.92, obsidian 
+windowrule = opacity 0.99 0.92, obsidian
 windowrulev2 = fullscreen,class:^(*.steam_app.*)$
 windowrulev2 = float,class:^(*.steam_app.*)$
+windowrulev2 = opacity 0.83 0.83, class:thunar
 windowrulev2 = float,class:^(thunar)$
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
