--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -127,7 +127,7 @@ device:epic-mouse-v1 {
 }
 misc {
   force_hypr_chan = true
-
+  mouse_move_enables_dpms = true
 }
 # Example windowrule v1
 windowrule = float, ^(pavucontrol)$
@@ -220,7 +220,8 @@ bind = $mainMod, Y, exec, ~/.local/bin/yt
 bind = $mainMod,F,fullscreen
 bind = $mainMod,TAB,workspace,previous
 bind = $mainMod SHIFT,s,exec, ~/.config/hypr/scripts/screenshot --area
-
+bind = $mainMod,x,exec, ~/.config/rofi/powermenu/type-5/powermenu.sh
+bind = $mainMod,l,exec, ~/.config/hypr/scripts/locker.sh
 # blurls = dashboard
 # layerrule = ignorezero, dashboard
 # Startup :workspace:workspace
@@ -228,7 +229,8 @@ exec = bash $HOME/.scripts/hypronstart.sh
 exec-once = swww init
 # exec = $HOME/.scripts/background/cron.sh ~/Pictures/Space/
 exec-once = /etc/profiles/per-user/hirschy/bin/brave
-exec-once = /etc/profiles/per-user/hirschy/bin/discord 
+exec-once = /etc/profiles/per-user/hirschy/bin/discord
+exec-once = ~/.config/hypr/scripts/sleep.sh
 # Workspace Binding.
 workspace = 1,monitor:DP-2,rounding:true,decorate:true
 workspace = 2,monitor:DP-2,rounding:true,decorate:true
