--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -59,13 +59,15 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     # blur_ignore_opacity = true
     rounding = 10
-    blur { 
-      enabled = true
-      size = 4
-      passes = 1 
-      new_optimizations = true 
-    }
     drop_shadow = yes
+    blur {
+      enabled = true
+      size = 12
+      passes = 3
+      new_optimizations = on
+      noise = 0.05
+      ignore_opacity = true
+    }
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
@@ -131,7 +133,10 @@ misc {
 }
 # Example windowrule v1
 windowrule = float, ^(pavucontrol)$
-windowrule = opacity 0.99 0.92, obsidian
+windowrule = opacity 0.8 0.7, obsidian
+windowrule = opacity 0.8 0.7, brave-browser
+windowrulev2 = opacity 0.8 0.7, class:discord
+windowrulev2 = opacity 1.0 1.0, title:^(.*YouTube.*)$
 windowrulev2 = fullscreen, class:^(*.steam_app.*)$
 windowrulev2 = float, class:^(*.steam_app.*)$
 windowrulev2 = float, class:(steam)
