--- a/BetterDiscord/plugins/0BDFDB.config.json
+++ b/BetterDiscord/plugins/0BDFDB.config.json
@@ -1,7 +1,7 @@
 {
 	"all": {
 		"changeLogs": {
-			"BDFDB": "3.5.3",
+			"BDFDB": "3.5.4",
 			"BetterFriendList": "1.5.5",
 			"BetterSearchPage": "1.2.4",
 			"CharCounter": "1.6.2",
@@ -10,12 +10,12 @@
 			"LastMessageDate": "1.3.7",
 			"PersonalPins": "2.1.8",
 			"PinDMs": "2.0.3",
-			"PluginRepo": "2.5.4",
+			"PluginRepo": "2.5.5",
 			"ReadAllNotificationsButton": "1.7.5",
 			"RemoveBlockedUsers": "1.6.7",
 			"ShowHiddenChannels": "9.9.9",
 			"SplitLargeMessages": "1.8.1",
-			"ThemeRepo": "2.5.4s"
+			"ThemeRepo": "2.5.5"
 		},
 		"choices": {
 			"toastPosition": "right"
@@ -27,7 +27,7 @@
 			"shareData": true
 		},
 		"hashes": {
-			"0BDFDB.data.json": "b6093b5b3b9b66f4ea01370fe723f0834b6739c4",
+			"0BDFDB.data.json": "26f067d2aa6361ef8fb05597be18b20dc18e16fd",
 			"0BDFDB.raw.css": "8c083e2a87a82aded5f3b2e27fb8b2f816b5f74a"
 		}
 	}
