--- a/hypr/window_rules.conf
+++ b/hypr/window_rules.conf
@@ -8,8 +8,9 @@ windowrulev2 = fullscreen, class:^(*.steam_app.*)$
 windowrulev2 = float, class:^(*.steam_app.*)$
 windowrulev2 = float, class:(steam)
 windowrulev2 = tile, class:(steam),title:^(.*Steam.*)$
-windowrulev2 = size 842 465, class:Thunar
+windowrulev2 = size 842 465, class:thunar
 windowrulev2 = opacity 0.83 0.83, class:thunar
+windowrulev2 = opacity 0.95 0.93, title:^(.*nvim.*)$
 windowrulev2 = float,class:^(thunar)$
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
