--- a/BetterDiscord/plugins/PinDMs.config.json
+++ b/BetterDiscord/plugins/PinDMs.config.json
@@ -65,7 +65,7 @@
 					},
 					"8928104835345421": {
 						"id": "8928104835345421",
-						"name": "❤Girlfriend❤",
+						"name": "❤👑Girlfriend❤",
 						"dms": [
 							"752006850337046529"
 						],
