Changed rofi menus a little

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -3,6 +3,7 @@ $mainMod = SUPER
 bind = $mainMod, Return, exec, kitty
 bind = $mainMod, O, killactive, 
 bind = $mainMod, M, exit,
+bind = $mainMod, N, exec, ~/.scripts/tog_gaps.sh
 bind = $mainMod, R, exec,hyprctl reload
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, exec, youtube-music --disable-gpu 
@@ -56,11 +57,17 @@ bind = ,Insert,pass,^(.*discord*.)$
 bind = $mainMod, F1, exec, ~/.config/hypr/scripts/show_binds.sh
 # Other
 bind = $mainMod, T, exec, thunar
-bind = $mainMod, U, exec, brave
-bind = $mainMod, D, exec, ~/.config/rofi/launchers/type-7/launcher.sh
+# bind = $mainMod, U, exec, brave
+bind = $mainMod, U, exec, firefox
+# Floating Pretty Launcher
+# bind = $mainMod, D, exec, ~/.config/rofi/launchers/type-6/launcher.sh
+# Docked Launcher
+# bind = $mainMod, D, exec, ~/.config/rofi/launchers/type-7/launcher.sh
+# Clean Launcher
+bind = $mainMod, D, exec, ~/.config/rofi/launchers/type-3/launcher.sh
 bind = $mainMod, Y, exec, ~/.local/bin/yt
 bind = $mainMod,F,fullscreen
 bind = $mainMod,TAB,workspace,previous
 bind = $mainMod SHIFT,s,exec, ~/.config/hypr/scripts/screenshot --area
-bind = $mainMod,x,exec, ~/.config/rofi/powermenu/type-5/powermenu.sh
+bind = $mainMod,x,exec, ~/.config/rofi/powermenu/powermenu.sh
 bind = $mainMod,l,exec, ~/.config/hypr/scripts/locker.sh
