--- a/hypr/window_rules.conf
+++ b/hypr/window_rules.conf
@@ -17,7 +17,8 @@ windowrulev2 = float,class:^(thunar)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 # App Workspace Bindings
-windowrule = workspace 1, ^(.*brave.*)$
+windowrule = workspace 1, ^(.*firefox.*)$
+# windowrule = workspace 1, ^(.*brave.*)$
 windowrulev2 = workspace 3, class:^(.*steam_app.*)$
 windowrule = workspace 8, ^(.*mpv.*)$
 windowrule = workspace 7, ^(.*discord.*)$
