--- a/hypr/startup.conf
+++ b/hypr/startup.conf
@@ -1,6 +1,7 @@
 exec = bash $HOME/.scripts/hypronstart.sh
 exec-once = swww init
 # exec = $HOME/.scripts/background/cron.sh ~/Pictures/Space/
-exec-once = /etc/profiles/per-user/hirschy/bin/brave
+exec-once = /etc/profiles/per-user/hirschy/bin/firefox
+# exec-once = /etc/profiles/per-user/hirschy/bin/brave
 exec-once = /etc/profiles/per-user/hirschy/bin/discord
 exec-once = ~/.config/hypr/scripts/sleep.sh
