Wlogout and new rofi

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -5,7 +5,7 @@ bind = $mainMod, O, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, N, exec, ~/.scripts/tog_gaps.sh
 bind = $mainMod, R, exec,hyprctl reload
-bind = $mainMod, E, exec, dolphin
+bind = $mainMod, E, exec, ~/.local/bin/dmenuunicode
 bind = $mainMod, V, exec, youtube-music --disable-gpu 
 bind = $mainMod, G, exec, ~/.config/hypr/scripts/gamelauncher.sh 2
 # bind = $mainMod, R, exec, wofi --show drun
@@ -54,9 +54,15 @@ bindm = $mainMod, mouse:273, resizewindow
 bind = $mainMod SHIFT, space,togglefloating
 # Discord PPT 
 bind = ,Insert,pass,^(.*discord*.)$
+
+# FKey binds
 bind = $mainMod, F1, exec, ~/.config/hypr/scripts/show_binds.sh
+bind = $mainMod, F2, exec, ~/.local/bin/dmenumount
+bind = $mainMod, F3, exec, ~/.local/bin/dmenuumount
+
 # Other
 bind = $mainMod, T, exec, thunar
+
 # bind = $mainMod, U, exec, brave
 bind = $mainMod, U, exec, firefox
 bind = $mainMod, D, exec, ~/.config/rofi/launchers/launcher.sh
@@ -64,5 +70,6 @@ bind = $mainMod, Y, exec, ~/.local/bin/yt
 bind = $mainMod,F,fullscreen
 bind = $mainMod,TAB,workspace,previous
 bind = $mainMod SHIFT,s,exec, ~/.config/hypr/scripts/screenshot --area
-bind = $mainMod,x,exec, ~/.config/rofi/powermenu/powermenu.sh
+bind = $mainMod,x,exec, wlogout
+# bind = $mainMod,x,exec, ~/.config/rofi/powermenu/powermenu.sh
 bind = $mainMod,l,exec, ~/.config/hypr/scripts/locker.sh
