--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 BetterDiscord/bdstorage.json
 BetterDiscord/emote_data.json
+mozilla/firefox/hirschy/storage/
+mozilla/firefox/hirschy/extensions/support@lastpass.com.xpi
+mozilla/firefox/hirschy/datareporting/
