Fixed Keybind Rofi script

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -62,7 +62,7 @@ bind = $mainMod, F3, exec, ~/.local/bin/dmenuumount
 
 # Other
 bind = $mainMod, T, exec, thunar
-
+bind = $mainMod, B, exec, kitty btop
 # bind = $mainMod, U, exec, brave
 bind = $mainMod, U, exec, firefox
 bind = $mainMod, D, exec, ~/.config/rofi/launchers/launcher.sh
