--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -1,5 +1,7 @@
 $mainMod = SUPER
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+
+bind = ALT, escape, fakefullscreen
 bind = $mainMod, Return, exec, kitty
 bind = $mainMod, O, killactive, 
 bind = $mainMod, M, exit,
@@ -63,9 +65,13 @@ bind = $mainMod, F3, exec, ~/.local/bin/dmenuumount
 # Other
 bind = $mainMod, T, exec, thunar
 bind = $mainMod, B, exec, kitty btop
+# Kill discord
+bind = $mainMod SHIFT, D, exec, ''ps aux | grep --color=auto --exclude-dir={.bzr,CVS,.git,.hg,.svn,.idea,.tox} [d]iscord | awk '{ print $2 }' | xargs kill''
+
 # bind = $mainMod, U, exec, brave
 bind = $mainMod, U, exec, firefox
 bind = $mainMod, D, exec, ~/.config/rofi/launchers/launcher.sh
+bind = ALT, space, exec, ~/.config/rofi/launchers/launcher.sh
 bind = $mainMod, Y, exec, ~/.local/bin/yt
 bind = $mainMod,F,fullscreen
 bind = $mainMod,TAB,workspace,previous
