--- a/hypr/window_rules.conf
+++ b/hypr/window_rules.conf
@@ -5,7 +5,7 @@ windowrule = opacity 0.8 0.7, obsidian
 # windowrulev2 = opacity 0.8 0.7, class:discord
 windowrulev2 = opacity 1.0 1.0, title:^(.*YouTube.*)$
 windowrulev2 = fullscreen, class:^(*.steam_app.*)$
-windowrulev2 = float, class:^(*.steam_app.*)$
+# windowrulev2 = float, class:^(*.steam_app.*)$
 windowrulev2 = float, class:(steam)
 windowrulev2 = tile, class:(steam),title:^(.*Steam.*)$
 windowrulev2 = size 842 465, class:thunar
@@ -31,3 +31,8 @@ windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 # Fix steam menu
 windowrulev2 = stayfocused, title:^()$,class:^(steam)$
 windowrulev2 = minsize 1 1, title:^()$,class:^(steam)$
+
+# Idle Inhibit
+
+windowrulev2 = idleinhibit focus, title:.*(yuzu).*
+windowrulev2 = idleinhibit focus, class:.*(steam_app).*
