A few minor changes

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -43,8 +43,8 @@ input {
 }
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    gaps_in = 5
-    gaps_out = 15
+    # gaps_in = 5
+    # gaps_out = 15
     border_size = 3 
     col.active_border = rgb(711C91) rgb(EA00D9) rgb(0abdc6) 45deg
     col.inactive_border = rgb(133e7c) rgb(091833) 45deg
