--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -65,6 +65,7 @@ bind = $mainMod, F3, exec, ~/.local/bin/dmenuumount
 # Other
 bind = $mainMod, T, exec, thunar
 bind = $mainMod, B, exec, kitty btop
+bind = $mainMod, H, exec, $HOME/.config/eww/scripts/eww-start.sh &
 # Kill discord
 bind = $mainMod SHIFT, D, exec, ''ps aux | grep --color=auto --exclude-dir={.bzr,CVS,.git,.hg,.svn,.idea,.tox} [d]iscord | awk '{ print $2 }' | xargs kill''
 
