A few minor changes

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ BetterDiscord/emote_data.json
 mozilla/firefox/hirschy/storage/
 mozilla/firefox/hirschy/extensions/support@lastpass.com.xpi
 mozilla/firefox/hirschy/datareporting/
+mozilla/firefox/firefox-mpris
