--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -36,6 +36,8 @@ input {
     kb_rules =
     # kb_options = caps:Super_L
     follow_mouse = 1
+    accel_profile = flat
+    force_no_accel = true
     touchpad {
         natural_scroll = no
     }
