--- a/hypr/startup.conf
+++ b/hypr/startup.conf
@@ -5,4 +5,4 @@ exec-once = /etc/profiles/per-user/hirschy/bin/firefox &
 # exec-once = /etc/profiles/per-user/hirschy/bin/brave
 exec-once = /etc/profiles/per-user/hirschy/bin/discord &
 exec-once = ~/.config/hypr/scripts/sleep.sh &
-exec-once = $HOME/.config/eww/scripts/eww-start.sh &
+exec = sleep 2;bash $HOME/.config/eww/scripts/eww-start.sh
