--- a/hypr/window_rules.conf
+++ b/hypr/window_rules.conf
@@ -36,3 +36,5 @@ windowrulev2 = minsize 1 1, title:^()$,class:^(steam)$
 
 windowrulev2 = idleinhibit focus, title:.*(yuzu).*
 windowrulev2 = idleinhibit focus, class:.*(steam_app).*
+windowrulev2 = idleinhibit always, class:firefox,title:^(.*S[0-9].*E[0-9].*)$
+windowrulev2 = idleinhibit always, class:firefox,title:^(.*YouTube.*)$
