--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -5,7 +5,7 @@ bind = ALT, escape, fakefullscreen
 bind = $mainMod, Return, exec, kitty
 bind = $mainMod, O, killactive, 
 bind = $mainMod, M, exit,
-bind = $mainMod, N, exec, ~/.scripts/tog_gaps.sh
+bind = $mainMod, N, exec, swaync-client -t
 bind = $mainMod, R, exec,hyprctl reload
 bind = $mainMod, E, exec, ~/.local/bin/dmenuunicode
 bind = $mainMod, V, exec, youtube-music --disable-gpu 
