--- a/hypr/window_rules.conf
+++ b/hypr/window_rules.conf
@@ -12,6 +12,11 @@ windowrulev2 = size 842 465, class:thunar
 windowrulev2 = opacity 0.83 0.83, class:thunar
 windowrulev2 = opacity 0.95 0.93, title:^(.*nvim.*)$
 windowrulev2 = float,class:^(thunar)$
+windowrulev2 = size 842 465, class:Thunar
+windowrulev2 = opacity 0.83 0.83, class:Thunar
+windowrulev2 = float,class:^(Thunar)$
+
+
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
@@ -20,7 +25,7 @@ windowrulev2 = float,class:^(thunar)$
 windowrule = workspace 1, ^(.*firefox.*)$
 # windowrule = workspace 1, ^(.*brave.*)$
 windowrulev2 = workspace 3, class:^(.*steam_app.*)$
-windowrule = workspace 8, ^(.*mpv.*)$
+windowrule = workspace 9, ^(.*mpv.*)$
 windowrule = workspace 7, ^(.*discord.*)$
 windowrulev2 = workspace 6, class:^(.*YouTube Music.*)$
 # XWaylandBridge
