--- a/hypr/startup.conf
+++ b/hypr/startup.conf
@@ -6,4 +6,4 @@ exec-once = /etc/profiles/per-user/hirschy/bin/firefox &
 exec-once = /etc/profiles/per-user/hirschy/bin/discord &
 exec-once = ~/.config/hypr/scripts/sleep.sh &
 exec = sleep 1 ; bash $HOME/.config/eww/scripts/eww-start.sh &
-exec = sleep 0.5 ; eww -c ~/.config/eww/bar close bar; eww -c ~/.config/eww/bar open bar
+exec = sleep 0.5 ; eww -c ~/.config/eww/bar close bar; eww -c ~/.config/eww/bar open bar &
