--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -14,6 +14,7 @@ bind = $mainMod, G, exec, ~/.config/hypr/scripts/gamelauncher.sh 2
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, I, exec, ~/.scripts/scrn_record.sh
+bind = $mainMod, C, exec, kitty nvim
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
